firebase config and first connection completed

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,8 @@
 REACT_APP_SPACE_ID=xcku8snhabxx
 REACT_APP_ACCESS_TOKEN=_EcQp5WvvdeB6mZ_4uNcjzpr0gMsA7BnrG72c07J1RI
+REACT_APP_FIREBASE_API_KEY= AIzaSyDh_COdB4Z4T-rp2vw80TkS7Q1icg7fF7k
+REACT_APP_FIREBASE_AUTH_DOMAIN=
+REACT_APP_FIREBASE_PROJECT_ID=
+REACT_APP_FIREBASE_STORAGE_BUCKET=
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
+REACT_APP_FIREBASE_APP_ID=1:574836843125:web:7440e4e20eb1f989334e3c
