--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.17.4",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.5",
     "firebase": "^9.6.1",
