--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.11.0",
+    "@date-io/date-fns": "^1.3.13",
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
     "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/pickers": "^3.3.10",
     "@material/textfield": "^13.0.0",
     "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.6",
