--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
     "@date-io/moment": "^2.11.0",
+    "@emailjs/browser": "^3.4.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/pickers": "^3.3.10",
@@ -19,6 +20,7 @@
     "antd": "^4.17.4",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.5",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "marked": "^4.0.8",
