--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
